--- a/streamscanner/src/main/webapp/WEB-INF/web.xml
+++ b/streamscanner/src/main/webapp/WEB-INF/web.xml
@@ -6,13 +6,18 @@
         metadata-complete="false"
         version="3.1">
 
-    <servlet>
-        <servlet-name>Hello</servlet-name>
-        <servlet-class>com.olegchir.streamscanner.HelloServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Hello</servlet-name>
-        <url-pattern>/hello/*</url-pattern>
-    </servlet-mapping>
+    <display-name>Wicket Examples</display-name>
+    <filter>
+        <filter-name>WicketApplication</filter-name>
+        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+        <init-param>
+            <param-name>applicationClassName</param-name>
+            <param-value>com.olegchir.streamscanner.WicketApplication</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>WicketApplication</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
