rename everything and add licenses

--- a/wicket-spring-security-example/pom.xml
+++ b/wicket-spring-security-example/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.olegchir.streamscanner</groupId>
-  <artifactId>streamscanner</artifactId>
+  <groupId>com.olegchir.experimental</groupId>
+  <artifactId>wicket-spring-security-example</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>streamscanner</name>
-  <url>http://maven.apache.org</url>
+  <name>wicket-spring-security-example</name>
+  <url>http://olegchir.com</url>
 
   <properties>
     <!--Explicitly target to Java 8-->
